corrected view on mobile devices

--- a/docs/styles/reset.scss
+++ b/docs/styles/reset.scss
@@ -187,7 +187,7 @@ ul, ol {
  */
 
 pre {
-  white-space: pre-wrap;
+  white-space: pre;
 }
 
 /**
